# tv-strategy

./: .gitattributes  .gitignore  .mcp.json  README.md  down_sub.sh  main.py  package.json  pyproject.toml  yt_dlp_utils.py  yt_subtitle_downloader.py
.cursor/: hooks.json  mcp.json
indicators/: stoch_rsi_divergence.pine  stoch_rsi_divergence_v3.md  stoch_rsi_divergence_v3.pine
jc_yt/: [Jason.Casper.VIP.LiveStreams].2026-03-11_13-01.Wednesday.Update.en.srt  [Jayson.Casper].2021-08-09_13-49.MARKET.CIPHER.TUTORIAL.FINDING.LONGS.IN.AN.UPTREND.ANALYSIS.Q&A.en.srt  [Jayson.Casper].2021-08-11_20-26.HOW.TO.SCALP.BTC.FOR.MASSIVE.GAINS.BITCOIN.SCALPING.STRATEGY.MARKET.CIPHER.en.srt  [Jayson.Casper].2021-10-03_20-53.BITCOIN.SCALPING.STRATEGY.FOR.MASSIVE.PROFITS.en.srt  [Jayson.Casper].2022-01-07_16-15.🔥.HOW.TO.SCALP.CRYPTO.FOR.MASSIVE.PROFITS.🔥.en.srt  [Jayson.Casper].2022-01-10_11-08.MARKET.CIPHER.SCALPING.STRATEGY.Best.Bitcoin.Scalping.Strategy.(Very.High.Win.Rate).en.srt  [Jayson.Casper].2022-05-16_02-37.$2,500.PROFIT.SHORT.SCALP.ANALYSIS.&.TARGETS.(Market.Cipher.Scalping).en.srt  [Jayson.Casper].2022-06-09_17-42.1.MIN.SCALPING.STRATEGY.NINJA.ENTRIES.HIGH.WINRATE.en.srt  [Jayson.Casper].2022-06-13_17-43.How.to.Add.to.Open.Scalp.Trades.en.srt  [Jayson.Casper].2022-07-12_18-06.1min.Scalping.Strategy.Super.Profitable.&.Simple.Step.by.Step.Tutorial.en.srt  [Jayson.Casper].2022-08-23_09-24.Scalping.Strategy.Using.ORDERFLOW.Coinalyze.CVD.&.Open.Interest.en.srt  [Jayson.Casper].2022-08-31_14-15.How.to.Trade.Swing.Failure.Pattern.Chickens.Drinking.Water.Trade.Setup.en.2.srt  (+16 more)
(+7 files in other folders)
